# llm-cost-fixture-recorder

./: README.md  README.zh-CN.md  pyproject.toml
examples/: calls.csv
llm_cost_fixture_recorder/: __main__.py
tests/: test_cli.py
